Fix scroll on page with no overflowing content

--- a/static/newtab.css
+++ b/static/newtab.css
@@ -7,6 +7,7 @@
 
 html, body {
   font-family: Roboto, sans-serif;
+  height: 100%;
 }
 
 /**
